# cpp_primer

./: README.md
Chapter_10_Generic_Algorithm/generic_algorithm/: CMakeLists.txt  generic_algorithm.cpp  generic_algorithm.h
Chapter_12_Dynamic_memory_and_smart_pointers/Dynamic_memory_and_samrt_points/: CMakeLists.txt  Dynamic_memory_and_samrt_points.cpp  Dynamic_memory_and_samrt_points.h
Chapter_2_Variables and basic types/variable_basic_types/: CMakeLists.txt  variable_basic_types.cpp  variable_basic_types.h
Chapter_7_Class/Class/: CMakeLists.txt  Class.cpp  Class.h
