# CMakeList.txt : CMake project for generic_algorithm, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("generic_algorithm")

# Add source to this project's executable.
add_executable (generic_algorithm "generic_algorithm.cpp" "generic_algorithm.h")

# TODO: Add tests and install targets if needed.
