# CMakeList.txt : CMake project for Dynamic_memory_and_samrt_points, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Dynamic_memory_and_samrt_points")

# Add source to this project's executable.
add_executable (Dynamic_memory_and_samrt_points "Dynamic_memory_and_samrt_points.cpp" "Dynamic_memory_and_samrt_points.h")

# TODO: Add tests and install targets if needed.
