# CMakeList.txt : CMake project for variable_basic_types, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("variable_basic_types")

# Add source to this project's executable.
add_executable (variable_basic_types "variable_basic_types.cpp" "variable_basic_types.h")

# TODO: Add tests and install targets if needed.
